[workspace]
resolver = "1"
members = [
    "lantun-cli",
    "lantun-core",
]

[workspace.dependencies]
tokio = { version = "1.45.0", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "net",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true