[package]
name = "lantun-cli"
version = "0.1.1"
edition = "2024"
authors = ["Maxomatic458"]
description = "TODO"
repository = "https://github.com/maxomatic458/lantun"
readme = "../README.md"
license = "MIT"
keywords = ["quic", "port-forwarding", "tunneling", "peer-to-peer", "cli"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.38", features = ["derive", "string"] }
color-eyre = "0.6.4"
dirs = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
# lantun-core = "0.1.1"
lantun-core = { path = "../lantun-core" }
toml = "0.8.22"

[[bin]]
path = "src/main.rs"
name = "lantun"