[package]
name = "lantun-core"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = "0.34.1"
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = "2.0.12"
rand = "0.8.5"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tokio = { version = "1.45.0", features = ["full"] }
socket2 = "0.5.9"
