[package]
name = "lantun-core"
version = "0.1.1"
edition = "2024"
authors = ["Maxomatic458"]
description = "lantun core library"
repository = "https://github.com/maxomatic458/lantun"
readme = "../README.md"
license = "MIT"
keywords = ["quic", "port-forwarding", "tunneling", "peer-to-peer"]

[dependencies]
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
iroh = "0.35.0"
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = "2.0.12"
rand = "0.8.5"
